--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -165,7 +165,7 @@
         {% else %}
         <button class="Button FollowButton Button--primary Button--blue" data-follow-type="question" data-followed="false" data-question-id="{{ context_question.id }}" type="button">关注</button>
         {% endifequal %}
-        <button class="Button Button--blue" type="button" onclick="show_answer_toolbar()">
+        <button class="Button Button--blue" type="button" onclick="showAnswerToolbar()">
         <svg viewBox="0 0 12 12" class="Icon Button-icon Icon--modify" style="height:16px;width:14px;" width="14" height="16" aria-hidden="true" data-reactid="123"><title data-reactid="124"></title><g data-reactid="125"><path d="M.423 10.32L0 12l1.667-.474 1.55-.44-2.4-2.33-.394 1.564zM10.153.233c-.327-.318-.85-.31-1.17.018l-.793.817 2.49 2.414.792-.814c.318-.328.312-.852-.017-1.17l-1.3-1.263zM3.84 10.536L1.35 8.122l6.265-6.46 2.49 2.414-6.265 6.46z" fill-rule="evenodd"></path></g>
         </svg>写回答</button>
         </div>
@@ -248,7 +248,7 @@
         </div>
         
         <div>
-        <button  class="Button Button--plain" type="button" onclick="hide_answer_toolbar()">
+        <button  class="Button Button--plain" type="button" onclick="hideAnswerToolbar()">
         <svg class="Zi Zi--Close " fill="currentColor" viewBox="0 0 24 24" width="24" height="24"><path d="M13.486 12l5.208-5.207a1.048 1.048 0 0 0-.006-1.483 1.046 1.046 0 0 0-1.482-.005L12 10.514 6.793 5.305a1.048 1.048 0 0 0-1.483.005 1.046 1.046 0 0 0-.005 1.483L10.514 12l-5.208 5.207a1.048 1.048 0 0 0 .006 1.483 1.046 1.046 0 0 0 1.482.005L12 13.486l5.207 5.208a1.048 1.048 0 0 0 1.483-.006 1.046 1.046 0 0 0 .005-1.482L13.486 12z" fill-rule="evenodd"></path></svg></button>
         </div>
         
@@ -294,8 +294,8 @@
         <div class="AnswerItem-meta AnswerItem-meta--related">
         <div class="AuthorInfo">
         <span class="UserLink AuthorInfo-avatarWrapper">
-        <a class="UserLink-link" href="/er/{{push_answer.author.id}}">
-        <img class="Avatar AuthorInfo-avatar PeoplePopover" width="40" height="40" src="{{push_answer.author.userprofile.avatar}}" srcset="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.username}}" data-author-id="{{push_answer.author.id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
+        <a class="UserLink-link PeoplePopover" href="/er/{{push_answer.author.id}}" data-author-id="{{push_answer.author.id}}" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">
+        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="{{push_answer.author.userprofile.avatar}}" srcset="{{push_answer.author.userprofile.avatar}}" alt="{{push_answer.author.username}}">
         </a>
         </span>
         <div class="AuthorInfo-content">
@@ -354,7 +354,7 @@
         </div>
                 
         <div class="Card">
-        <a class="QuestionMainAction" data-za-detail-view-element_name="ViewAll" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
+        <a class="QuestionMainAction" href="/question/{{ context_question.id }}">查看全部 {{context_question.answer_nums}} 个回答</a>
         </div>
         {% endif %}
         </div>
@@ -512,8 +512,8 @@ function appendMoreAnswerListElement(ret)
         <div class="AnswerItem-meta AnswerItem-meta--related">\
         <div class="AuthorInfo">\
         <span class="UserLink AuthorInfo-avatarWrapper">\
-        <a class="UserLink-link" href="/er/'+author_id+'">\
-        <img class="Avatar AuthorInfo-avatar PeoplePopover" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
+        <a class="UserLink-link PeoplePopover" href="/er/'+author_id+'" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
+        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
         </a>\
         </span>\
         <div class="AuthorInfo-content">\
@@ -579,8 +579,8 @@ function appendNormalAnswerListElement(ret) //"type_list"
         <div class="AnswerItem-meta AnswerItem-meta--related">\
         <div class="AuthorInfo">\
         <span class="UserLink AuthorInfo-avatarWrapper">\
-        <a class="UserLink-link" href="/er/'+author_id+'">\
-        <img class="Avatar AuthorInfo-avatar PeoplePopover" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'" data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
+        <a class="UserLink-link PeoplePopover" href="/er/'+author_id+'"  data-author-id="'+author_id+'" data-toggle="popover" data-placement="right" data-trigger="manual" data-content="null" data-html="true">\
+        <img class="Avatar AuthorInfo-avatar" width="40" height="40" src="'+author_avatar+'" srcset="'+author_avatar+'" alt="'+author_name+'">\
         </a>\
         </span>\
         <div class="AuthorInfo-content">\
@@ -699,7 +699,7 @@ function showInvite()
         {
             appendInviteElement(ret);
             $("#inviteModal").modal('show');
-            check_sets();
+            checkSets();
             invite();
         }
     })
@@ -758,11 +758,12 @@ function appendAuthorCardElement(ret)
     </div>\
     ';
     if (author_followed)
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--grey" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="true">已关注</button><button class="Button" type="button">发私信</button></div></div>';
+        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--grey" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="true">已关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
     else
-        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--blue" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="false">关注</button><button class="Button" type="button">发私信</button></div></div>';
+        var data2='<div class="MemberButtonGroup AnswerAuthor-buttons"><button class="Button FollowButton Button--primary Button--blue" type="button" data-er-id="'+author_id+'" data-follow-type="people" data-followed="false">关注</button><button class="Button" type="button" data-toggle="modal" data-target="#letterModal">发私信</button></div></div>';
     var data=data1+data2;
     $(".Card.AnswerAuthor").append(data);
+    setLetterReceiver(author_id,author_name);
 }
 function showAuthorCard()
 {
@@ -773,7 +774,7 @@ function showAuthorCard()
             if("fail"!=ret)
             {
                 appendAuthorCardElement(ret);
-                check_sets();
+                checkSets();
             }
         });
         return "more_answer_list";
@@ -785,19 +786,8 @@ function showAuthorCard()
         return "normal_answer_list";
     }
 }
-/*
-function prepare_content()
-{
-    var content=$(".RichText.CopyrightRichText-richText.more").attr("data-content");
-    indexImgSrc=get_index_img(content);
-    if (null==indexImgSrc)
-        indexImgSrc="null";
-    collapse_content=remove_img(content);
-    $(".RichContent-cover").find("img").attr("src",indexImgSrc);
-    $(".RichText.CopyrightRichText-richText.less").text(collapse_content);
-}
-*/
-function get_more_content(type)
+
+function getMoreContent(type)
 {
     if("more_answer_list"==type)
     {
@@ -809,7 +799,7 @@ function get_more_content(type)
             if("fail"!=ret)
             {
                 appendMoreAnswerListElement(ret);
-                check_sets();
+                checkSets();
             }
         });
     }
@@ -824,13 +814,13 @@ function get_more_content(type)
             if("fail"!=ret)
             {
                 appendNormalAnswerListElement(ret);
-                check_sets();
+                checkSets();
             }
         });
     }
 }
 
-function init_answer_list(type)
+function initAnswerList(type)
 {
     if("more_answer_list"==type)
     {
@@ -859,7 +849,7 @@ console.log(getClientHeight());
 console.log(getScrollHeight());
 if (getScrollTop() + getClientHeight() +1 >= getScrollHeight()) { 
         if("normal_answer_list"==answer_list_type)
-            get_more_content(answer_list_type); 
+            getMoreContent(answer_list_type); 
     } 
 } 
 
@@ -868,9 +858,9 @@ function init()
 {
     answer_list_type=showAuthorCard(); 
     //prepare_content();
-    init_answer_list(answer_list_type);
-    get_more_content(answer_list_type);
-    check_sets();
+    initAnswerList(answer_list_type);
+    getMoreContent(answer_list_type);
+    checkSets();
     
     $('#summernote_answer').summernote({
     height:200,
@@ -878,7 +868,7 @@ function init()
     placeholder:'写回答...',
     callbacks: {
         onImageUpload: function(files){
-            img=sendFile_answer(files[0]);
+            img=sendFileAnswer(files[0]);
             console.log(img);
         }
     }
@@ -890,16 +880,14 @@ function init()
     placeholder:'问题背景、条件等详细信息',
     callbacks: {
         onImageUpload: function(files){
-            img=sendFile_question(files[0]);
+            img=sendFileQuestion(files[0]);
             console.log(img);
         }
     }
     });
+    
+    appendLetterModal();
 }
-
-$(document).ready(function() {
-    init();
-});
 </script>
 </body>
 
