--- a/question/templates/question/t_er_active.html
+++ b/question/templates/question/t_er_active.html
@@ -9,13 +9,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
 </head>
-<body class="Entry-body" style="overflow: auto;">
-<div id="root">
-<div>
-<div class="LoadingBar">
-</div>
-<div>
 
+<body class="Entry-body">
 <header  role="banner" class="123Sticky AppHeader">
 <div class="AppHeader-inner">
 
@@ -30,7 +25,7 @@
 </div>
 <nav role="navigation" class="col-md-3">
 <a class="AppHeader-navItem" href="/">首页</a>
-<a class="AppHeader-navItem" href="/explore">发现</a>
+<a class="AppHeader-navItem" href="/maimai">买卖</a>
 <a class="AppHeader-navItem" href="/topic">话题</a>
 </nav>
 
@@ -57,14 +52,14 @@
 
 <div class="AppHeader-userInfo col-md-2">
 <div class="1Popover PushNotifications AppHeader-notifications">
-<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="Popover-88478-67360-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-67360-content">
+<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="NotificationPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 22" class="Icon Icon--news" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M2.502 14.08C3.1 10.64 2 3 8.202 1.62 8.307.697 9.08 0 10 0s1.694.697 1.797 1.62C18 3 16.903 10.64 17.497 14.076c.106 1.102.736 1.855 1.7 2.108.527.142.868.66.793 1.206-.075.546-.542.95-1.09.943H1.1C.55 18.34.084 17.936.01 17.39c-.075-.547.266-1.064.794-1.206.963-.253 1.698-1.137 1.698-2.104zM10 22c-1.417.003-2.602-1.086-2.73-2.51-.004-.062.02-.124.063-.17.043-.045.104-.07.166-.07h5c.063 0 .124.025.167.07.044.046.067.108.063.17-.128 1.424-1.313 2.513-2.73 2.51z"></path></g>
 </svg>
 </button>
 </div>
 
 <div class="1Popover Messages AppHeader-messages">
-<button class="1Button Messages-icon 1Button--plain" type="button" id="Popover-88478-87650-toggle" aria-haspopup="true" aria-expanded="false" aria-owns="Popover-88478-87650-content">
+<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
 </svg>
 </button>
@@ -72,20 +67,7 @@
 
 <div class="AppHeader-profile">
 <div class="1Popover AppHeader-menu">
-<span class="dropdown">
-<img class="Avatar AppHeader-profileAvatar CPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
-<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-<li>
-<a id="action-1" href="/er/{{user.id}}">Homepage</a>
-</li>
-<li>
-<a href="#">Setting</a>
-</li>
-<li>
-<a href="/exit/">Exit</a>
-</li>   
-</ul>
-</span>
+<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="{{user.userprofile.avatar}}" srcset="{{user.userprofile.avatar}} 2x">
 </div>
 </div>
 
@@ -128,7 +110,7 @@
 <li class="UserCoverGuide-item" style="background-image: url(&quot;https://static.zhihu.com/heifetz/guide-cover-5.2b2adaebc37bf48bacae.jpg&quot;);"></li>
 </ul>
 </div>
-<div class="UserCover UserCover--colorBlock"><!-- react-text: 2730 --><!-- /react-text -->
+<div class="UserCover UserCover--colorBlock">
 </div>
 </div>
 <input type="file" accept="image/png,image/jpeg" style="display: none;">
@@ -162,7 +144,7 @@
 <span class="ProfileHeader-tips">暂无个人资料</span>
 <div class="ProfileHeader-contentFooter">
 <div class="ProfileButtonGroup ProfileHeader-buttons">
-<button class="Button Button--blue" type="button"><!-- react-text: 2754 -->编辑<!-- /react-text --><!-- react-text: 2755 -->个人<!-- /react-text --><!-- react-text: 2756 -->资料<!-- /react-text --></button>
+<button class="Button Button--blue" type="button">编辑个人资料</button>
 </div>
 </div>
 </div>
@@ -181,25 +163,25 @@
 </li>
 -->
 <li role="tab" class="Tabs-item" aria-controls="Profile-answers">
-<a class="Tabs-link" href="/er/{{er.id}}/answers/"><!-- react-text: 2766 -->回答<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/answers/">回答<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-asks">
-<a class="Tabs-link" href="/er/{{er.id}}/asks/"><!-- react-text: 2770 -->提问<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/asks/">提问<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-posts">
-<a class="Tabs-link" href="/er/{{er.id}}/posts/"><!-- react-text: 2774 -->文章<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/posts/">文章<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-columns">
-<a class="Tabs-link" href="/er/{{er.id}}/columns/"><!-- react-text: 2778 -->专栏<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/columns/">专栏<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-pins">
-<a class="Tabs-link" href="/er/{{er.id}}/pins/"><!-- react-text: 2782 -->想法<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/pins/">想法<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-collections">
-<a class="Tabs-link" href="/er/{{er.id}}/collections/"><!-- react-text: 2782 -->收藏<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/collections/">收藏<span class="Tabs-meta">0</span></a>
 </li>
 <li role="tab" class="Tabs-item" aria-controls="Profile-following">
-<a class="Tabs-link" href="/er/{{er.id}}/following/"><!-- react-text: 2782 -->关注<!-- /react-text --><span class="Tabs-meta">0</span></a>
+<a class="Tabs-link" href="/er/{{er.id}}/following/">>关注<span class="Tabs-meta">0</span></a>
 </li>
 
 <!--
@@ -383,8 +365,9 @@
 
 <script src="{%static 'common/jquery.js' %}"></script>
 <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+<script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
+<script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
 <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
-<script src="{% static 'common/summernote-0.8.8/lang/summernote-zh-CN.js' %}"></script> 
 <script src="{% static 'common/main.js' %}"></script>
 <script>
 function appendFollowElementSub(subcmd,ret)
