update new z_main.css update topics page

--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'common/z_2.css' %}">
 </head>
 
 <body class="Entry-body">
@@ -52,14 +53,14 @@
 
 <div class="AppHeader-userInfo col-md-2">
 <div class="1Popover PushNotifications AppHeader-notifications">
-<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="cPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
+<button class="1Button PushNotifications-icon 1Button--plain" type="button" id="NotificationPopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 22" class="Icon Icon--news" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M2.502 14.08C3.1 10.64 2 3 8.202 1.62 8.307.697 9.08 0 10 0s1.694.697 1.797 1.62C18 3 16.903 10.64 17.497 14.076c.106 1.102.736 1.855 1.7 2.108.527.142.868.66.793 1.206-.075.546-.542.95-1.09.943H1.1C.55 18.34.084 17.936.01 17.39c-.075-.547.266-1.064.794-1.206.963-.253 1.698-1.137 1.698-2.104zM10 22c-1.417.003-2.602-1.086-2.73-2.51-.004-.062.02-.124.063-.17.043-.045.104-.07.166-.07h5c.063 0 .124.025.167.07.044.046.067.108.063.17-.128 1.424-1.313 2.513-2.73 2.51z"></path></g>
 </svg>
 </button>
 </div>
 
 <div class="1Popover Messages AppHeader-messages">
-<button class="1Button Messages-icon 1Button--plain" id="dPopover" type="button" id="Popover-88478-87650-toggle" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
+<button class="1Button Messages-icon 1Button--plain" id="MessagePopover" type="button" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
 <svg viewBox="0 0 20 20" class="Icon Icon--message" width="20" height="20" aria-hidden="true" style="height: 20px; width: 20px;"><title></title><g><path d="M9 0C3.394 0 0 4.13 0 8c0 1.654.522 3.763 2.014 5.566.314.292.518.82.454 1.17-.165 1.488-.842 1.905-.842 1.905-.328.332.105.67.588.582 1.112-.2 2.07-.58 3.526-1.122.4-.202.464-.147.78-.078C11.524 17.764 18 14 18 8c0-3.665-3.43-8-9-8z"></path><path d="M19.14 9.628c.758.988.86 2.01.86 3.15 0 1.195-.62 3.11-1.368 3.938-.21.23-.354.467-.308.722.12 1.073.614 1.5.614 1.5.237.24-.188.563-.537.5-.802-.145-1.494-.42-2.545-.81-.29-.146-.336-.106-.563-.057-2.043.712-4.398.476-6.083-.926 5.964-.524 8.726-3.03 9.93-8.016z"></path></g>
 </svg>
 </button>
@@ -67,7 +68,7 @@
 
 <div class="AppHeader-profile">
 <div class="1Popover AppHeader-menu">
-<img class="Avatar AppHeader-profileAvatar" id="ePopover" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="/media/img/default.jpg" srcset="/media/img/default.jpg 2x">
+<img class="Avatar AppHeader-profileAvatar" id="MenuPopover" data-er-id="{{user.id}}" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body" width="30" height="30" src="{{user.userprofile.avatar}}" srcset="{{user.userprofile.avatar}} 2x">
 </div>
 </div>
 
@@ -77,46 +78,35 @@
 </div>
 </div>
 </header>
-<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 53px;">
-</div>
+
+<div class="Sticky--holder" style="position: relative; top: 0px; right: 0px; bottom: 0px; left: 0px; display: block; float: none; margin: 0px; height: 3px;"></div>
 
         <!--------------------main---------------------->
         <main role="main">
-        <div id="TopicItems">
+        
+        <div class="AppHeader">
+        <div class="container">
         <div class="row">
-        <div class="col-md-8">
-        {% if topics_list %}
-            {% for topic in followtopics_list %}
-        <div class="TopicFrame font-black">
-            <div>
-            <a href="/topic/{{ topic.id }}/" data-topic-id="{{ topic.id }}">{{ topic.name }}</a>
-            </div>
-            <button class="btn btn-success" style="display:none">取消关注</button>
+        <div class="1col-md-offset-1 col-md-8">
+        
+        <div class="zm-topic-cat-sub">
+        <div class="zh-general-list clearfix"  style="display: block;">
+        <div id="topiclist">
+        </div>
+
+        </div><a aria-role="button" class="zg-btn-white zu-button-more">更多</a>
+        <a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="display:none">更多</a>
+        </div>
+
+        </div>
+        </div>
+        </div>
         </div>
         
-        <div>&nbsp;</div>
-            {% endfor %}
-            
-            {% for topic in topics_list %}
-            {% if topic not in followtopics_list %}
-        <div class="TopicFrame font-black">
-            <div>
-            <a href="/topic/{{ topic.id }}/" data-topic-id="{{ topic.id }}">{{ topic.name }}</a>
-            </div>
-            <button class="btn btn-success" style="display:none">关注</button>
-        </div>
-        
-        <div>&nbsp;</div>
-            {% endif %}
-            {% endfor %}
-        {% endif %}
-        </div>
-        </div>
-        </div>
+       
         </main>
         <!--------------------main end-------------------->
 
-</div>
 
 <!--- div other--->
 <!-- 模态框（Modal） -->
@@ -162,103 +152,73 @@
 	</div><!-- /.modal -->
 </div>
 <!--- div other--->
-    <script src="{%static 'common/jquery.js' %}"></script>
-    <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
-    <script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
-    <script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
-    <script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
-	<script src="{% static 'common/main.js' %}"></script>
-    
-    <script>
-    $(window).on('load', function () {
-    $('#topics_select').selectpicker({
-        'selectedText': 'cat'
-    });
-    
-    /*
-    buttons=$('#TopicItems').find('button');
-    buttons.each(function(index,element){
-    $(element).attr('id','topic'+index);
-    $(element).attr('style','display:block');
-    });
-    */
-    
-    topics=$('.TopicFrame');
-    topics.each(function(index,element){
-    button=$(element).find('button');
-    button.attr('id','topic'+index);
-    button.attr('style','display:block');
-    button.click(function(){
-        topic_id=$(topics[index]).find('a').attr('data-topic-id');
-        if('关注'==$(topics[index]).find('button').text())
-        {
-            $.post("/ajax/topic_follow/1/"+topic_id+"/",function(ret){
-                $(topics[index]).find('button').text('取消关注');
-            });
-        }
-        else
-        {
-            $.post("/ajax/topic_follow/0/"+topic_id+"/",function(ret){
-                $(topics[index]).find('button').text('关注');
-            });
-        }
-        
-        }.bind(this,index));
-    });
-});
+<script src="{%static 'common/jquery.js' %}"></script>
+<script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
+<script src="{% static 'common/bootstrap-select-1.12.4/js/bootstrap-select.js' %}"></script>
+<script src="{% static 'common/bootstrap-select-1.12.4/js/i18n/defaults-zh_CN.js' %}"></script>
+<script src="{% static 'common/summernote-0.8.8/summernote.js' %}"></script>
+<script src="{% static 'common/main.js' %}"></script>
 
-$('#topics_select').on('show.bs.select', function (e) {
-  // do something...
-  //alert("show.bs.select");
-  $.post("/ajax/topics/", function(ret){
-  //$('#result').html(ret.result)
-  //alert(JSON.stringify(ret));
-  //$.each(ret,function(data){
-  //alert(ret[data]);
-  //});
-  for (var i in ret)
-    $('#topics_select').append("<option value=" + ret[i] + ">" + ret[i] + "</option>");
-    
-  $('.selectpicker').selectpicker('refresh');
-  
-  })
-
-});
-$('#topics_select').on('shown.bs.select', function (e) {
-  // do something...
-  //alert("shown.bs.select");
-});
-$('#topics_select').on('hide.bs.select', function (e) {
-  // do something...
-  //alert("hide.bs.select");
-});
-$('#topics_select').on('hidden.bs.select', function (e) {
-  // do something...
-  //alert("hidden.bs.select");
-  $("#hide_topics").attr("value",$("#topics_select").val());
-});
-$('#topics_select').on('loaded.bs.select', function (e) {
-  // do something...
-  //alert("loaded.bs.select");
-});
-$('#topics_select').on('rendered.bs.select', function (e) {
-  // do something...
-  //alert("rendered.bs.select");
-});
-$('#topics_select').on('refreshed.bs.select', function (e) {
-  // do something...
-  //alert("refreshed.bs.select");
-});
-$('#topics_select').on('changed.bs.select', function (e) {
-  // do something...
-  //alert("changed.bs.select");
-});
-
-function follow_topic()
+<script>
+function appendTopicElement(ret)
 {
-alert("follow_topic():"+name);
+    for( var i in ret)
+    {
+        var topic_id=ret[i][0];
+        var topic_name=ret[i][1];
+        var topic_avatar=ret[i][2];
+        var topic_detail=ret[i][3];
+        var topic_question_nums=ret[i][4];
+        var topic_follower_nums=ret[i][5];
+        var topic_pub_date=ret[i][5];
+        
+        if(topiclist_item_nums%2!=0)//odd
+        {
+            var data='<div class="item"><div class="blk">\
+                        <a target="_blank" href="/topic/'+topic_id+'">\
+                        <img src="'+topic_avatar+'" alt="'+topic_name+'">\
+                        <strong>'+topic_name+'</strong>\
+                        </a>\
+                        <p>'+topic_detail+'</p>\
+                        <a id="t::-253" href="javascript:;" class="follow meta-item zg-follow"><i class="z-icon-follow"></i>关注</a>\
+                        </div></div>';
+        }
+        else//even
+        {
+            var data='<div class="item even"><div class="blk">\
+                        <a target="_blank" href="/topic/'+topic_id+'">\
+                        <img src="'+topic_avatar+'" alt="'+topic_name+'">\
+                        <strong>'+topic_name+'</strong>\
+                        </a>\
+                        <p>'+topic_detail+'</p>\
+                        <a id="t::-1172" href="javascript:;" class="follow meta-item zg-follow"><i class="z-icon-follow"></i>关注</a>\
+                        </div></div>';
+        }
+        $("#topiclist").append(data);
+        topiclist_item_nums++;
+    }
+} 
+function getMoreData(step) { 
+    var nums=$('.item.even').length;
+    var bIsGetAll="0";//pub_date
+    var start=nums;
+    var end=start+step;
+    $.get('/ajax/topics/'+bIsGetAll+'/'+start+'/'+end+'/',function(ret){
+        if("fail"!=ret)
+        {
+            appendTopicElement(ret);  
+            checkSets();
+        }
+    });
+} 
+function init()
+{
+    topiclist_item_nums=0;
+    getMoreData(20);
+    appendLetterModal();
 }
-    </script>
+
+</script>
 
 </body>
 
