--- a/static/common/main.css
+++ b/static/common/main.css
@@ -1,5 +1,5 @@
 /*@import url(http://fonts.googleapis.com/css?family=Roboto:100);*/
-@import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);
+/*@import url(http://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css);*/
 
 body {
   /*background: url(timg.jpg);*/
@@ -462,4 +462,6 @@ textarea {
     padding: 10px 0;
     text-align: right;
 }
-
+.is-hide{
+    display:none;
+}
