--- a/static/common/z_main.css
+++ b/static/common/z_main.css
@@ -562,7 +562,7 @@ html[data-ios] .DraftEditor-root .token.bold,html[data-ios] .DraftEditor-root .t
 html[data-android] .DraftEditor-root .token.bold,html[data-android] .DraftEditor-root .token.important{font-weight:700}
 .DraftEditor-root .token.italic{font-style:italic}
 .DraftEditor-root .token.entity{cursor:help}
-.Card{margin-bottom:10px;background:#fff;overflow:hidden;border-radius:2px;-webkit-box-shadow:0 1px 3px rgba(0,0,0,.1);box-shadow:0 1px 3px rgba(0,0,0,.1);-webkit-box-sizing:border-box;box-sizing:border-box}
+.Card{margin-bottom:10px;background:#fff;/*overflow:hidden;*/border-radius:2px;-webkit-box-shadow:0 1px 3px rgba(0,0,0,.1);box-shadow:0 1px 3px rgba(0,0,0,.1);-webkit-box-sizing:border-box;box-sizing:border-box}
 .Card:last-child{margin-bottom:0}
 .Card-header{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;height:50px;padding:0 20px;border-bottom:1px solid #f0f2f7;-webkit-box-sizing:border-box;box-sizing:border-box}
 .Card-header:last-child{border-bottom:none}
@@ -724,7 +724,7 @@ html[data-android] .Qrcode-container p.Qrcode-scanResultTips{font-weight:700}
 .CornerButton:hover{background:#d5dbe7}
 .CornerButton .Zi{fill:#9aaabf}
 .CornerButton .Zi:hover{fill:#8d9eb3}
-html:not([data-focus-method=pointer]) .Button:focus{-webkit-box-shadow:0 0 0 2px #fff,0 0 0 4px rgba(38,148,237,.3);box-shadow:0 0 0 2px #fff,0 0 0 4px rgba(38,148,237,.3)}
+html:not([data-focus-method=pointer])/* .Button:focus{-webkit-box-shadow:0 0 0 2px #fff,0 0 0 4px rgba(38,148,237,.3);box-shadow:0 0 0 2px #fff,0 0 0 4px rgba(38,148,237,.3)}*/
 .Tooltip{position:absolute;width:0;height:0}
 .Tooltip-enter,.Tooltip-leave{-webkit-transition:opacity .3s;transition:opacity .3s}
 .Tooltip-enter{opacity:0}
@@ -1099,7 +1099,7 @@ html[data-android] .CommentTopbar-title{font-weight:700}
 .CommentList-expendCollapseButton:hover{color:#7a8599}
 .AuthorInfo{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center}
 .AuthorInfo-avatar{vertical-align:top}
-.AuthorInfo-content{-webkit-box-flex:1;-ms-flex:1;flex:1;margin-left:14px;overflow:hidden}
+.AuthorInfo-content{-webkit-box-flex:1;-ms-flex:1;flex:1;margin-left:14px;/*overflow:hidden*/}
 .AuthorInfo-head{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;font-size:15px;line-height:1.1;-ms-flex-negative:0;flex-shrink:0}
 .AuthorInfo-name{font-weight:600;font-synthesis:style}
 html[data-ios] .AuthorInfo-name{font-weight:500}
@@ -1184,7 +1184,7 @@ html[data-android] .AuthorInfo-name{font-weight:700}
 .SignFlow-captchaContainer{height:48px;margin-top:12px;-webkit-transition:height .3s ease;transition:height .3s ease}
 .SignFlow-snackBar{font-size:13px;color:#8590a6}
 .SignFlow-snackBarLink{color:#175199}
-.Tag{position:relative;display:inline-block;height:30px;padding:0 12px;font-size:14px;line-height:30px;color:#3e7ac2;vertical-align:top;background:#eef4fa;border-radius:100px}
+.Tag{/*position:relative;*/display:inline-block;height:30px;padding:0 12px;font-size:14px;line-height:30px;color:#3e7ac2;vertical-align:top;background:#eef4fa;border-radius:100px}
 .Tag--removable{padding-right:28px}
 .Tag-remove{position:absolute;top:0;right:10px;bottom:0;margin-top:auto;margin-bottom:auto;cursor:pointer;padding:0;background:none;border:none;outline:none}
 .Tag-remove .Zi{display:block;fill:#96b7dd}
@@ -1523,7 +1523,7 @@ html[data-ios] .List-headerText{font-weight:500}
 html[data-android] .List-headerText{font-weight:700}
 .List-headerOptions{font-size:14px}
 .List-loading{padding:200px 0;color:#8590a6;text-align:center}
-.List-item{position:relative;padding:16px 20px}
+.List-item{/*position:relative;*/padding:16px 20px}
 .List-item+.List-item:after{position:absolute;left:0;right:0;top:0;margin:0 20px;display:block;border-bottom:1px solid #f0f2f7;content:""}
 .List-item--holder{padding:24px 0}
 .List-itemMeta{margin-bottom:10px;color:#8590a6}
@@ -1539,7 +1539,7 @@ html[data-android] .ContentItem-title{font-weight:700}
 .ContentItem-author{padding-top:10px}
 .ContentItem-status{margin-top:5px;color:#8590a6;font-size:14px}
 .ContentItem-statusItem:not(:first-child):before{margin:0 5px;content:"\B7"}
-.ContentItem-actions{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;padding:10px 20px;margin:0 -20px -10px;color:#555;background:#fff;clear:both}
+.ContentItem-actions{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-align:center;-ms-flex-align:center;align-items:center;height:52px;padding:0px 10px;margin:4px -10px -8px;color:#555;background:#fff;clear:both}
 .ContentItem-actions.is-fixed{margin:0;-webkit-box-shadow:0 -1px 3px rgba(0,34,77,.05);box-shadow:0 -1px 3px rgba(0,34,77,.05)}
 .ContentItem-actions .Button--plain:hover{color:#7a8599}
 .ContentItem-actions .Button--plain:hover .Icon{fill:#95a1ba}
@@ -2222,7 +2222,7 @@ html[data-android] .QuestionStatus-bar-commercialMuted{font-weight:700}
 .OrgQuestionSymbol-name .UserLink{font-weight:600;font-synthesis:style;color:#262626}
 html[data-ios] .OrgQuestionSymbol-name .UserLink{font-weight:500}
 html[data-android] .OrgQuestionSymbol-name .UserLink{font-weight:700}
-.QuestionHeader{position:relative;min-width:1032px;padding:16px 0;overflow:hidden;background:#fff;-webkit-box-shadow:0 1px 3px 0 rgba(0,37,55,.1);box-shadow:0 1px 3px 0 rgba(0,37,55,.1)}
+.QuestionHeader{/*position:relative;*/min-width:1032px;padding:16px 0;overflow:hidden;background:#fff;-webkit-box-shadow:0 1px 3px 0 rgba(0,37,55,.1);box-shadow:0 1px 3px 0 rgba(0,37,55,.1)}
 .QuestionHeader-content{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;width:1000px;height:100%;padding:0 16px;margin:0 auto}
 .PageHeader .QuestionHeader-content{-webkit-box-align:center;-ms-flex-align:center;align-items:center}
 .QuestionHeader-main{width:694px;padding-left:20px;-webkit-box-sizing:border-box;box-sizing:border-box}
@@ -2831,7 +2831,7 @@ html[data-android] .TopstoryItem-uninterestTitle{font-weight:700}
 .TopstoryItem-uninterestTag.is-active{background:#2d84cc;border:1px solid #2d84cc;color:#fff}
 .TopstoryItem-menuItem{line-height:36px;font-size:14px;color:#8590a6}
 .TopstoryMain{width:694px;padding-bottom:20px}
-.TopstorySideBar-categoryList{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;margin:20px 0 -5px;padding:0 10px}
+.TopstorySideBar-categoryList{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap;margin:0px 0 -5px;padding:0 10px}
 .TopstorySideBar-categoryItem{width:33%;display:-webkit-box;display:-ms-flexbox;display:flex;margin-bottom:25px}
 .TopstorySideBar-categoryItem .Button{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-flex:1;-ms-flex:1;flex:1;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:relative;cursor:pointer;color:currentColor}
 .TopstorySideBar-categoryItem a:hover .TopstorySideBar-categoryLabel{color:currentColor}
