--- a/question/templates/question/t_alltopics.html
+++ b/question/templates/question/t_alltopics.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="{% static 'common/summernote-0.8.8/summernote.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'common/z_main.css' %}">
 <link rel="stylesheet" type="text/css" href="{% static 'common/main.css' %}">
-<link rel="stylesheet" type="text/css" href="{% static 'common/z_2.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'common/11z_2.css' %}">
 
 <script src="{%static 'common/jquery.js' %}"></script>
 <script src="{% static 'common/bootstrap-3.3.7/js/bootstrap.js' %}"></script>
@@ -18,6 +18,36 @@
 <script src="{% static 'common/main.js' %}"></script>
 
 <script>
+function followTopics()
+{
+    $("a[name='follow']").off("click");
+    $("a[name='follow']").on("click",function(){
+        var element=$(this);
+        var topic_id=element.attr("data-topic-id");
+        if("true"==element.attr("data-followed"))
+        {
+            $.post("/ajax/topic_follow/0/"+topic_id+"/",function(ret){
+                if("fail"!=ret)
+                {
+                    element.removeClass("zg-unfollow").addClass("zg-follow").text("关注");
+                    element.attr("data-followed","false");
+                    //updateValue("topic-followed",ret);
+                }
+            }); 
+        }
+        else
+        {
+            $.post("/ajax/topic_follow/1/"+topic_id+"/",function(ret){
+                if("fail"!=ret)
+                {
+                    element.removeClass("zg-follow").addClass("zg-unfollow").text("取消关注");
+                    element.attr("data-followed","true");
+                    //update_value("topic-followed",ret);
+                }
+            });  
+        }
+    });
+}
 function appendTopicElement(ret)
 {
     for( var i in ret)
@@ -28,7 +58,13 @@ function appendTopicElement(ret)
         var topic_detail=ret[i][3];
         var topic_question_nums=ret[i][4];
         var topic_follower_nums=ret[i][5];
-        var topic_pub_date=ret[i][5];
+        var topic_pub_date=ret[i][6];
+        var topic_followed=ret[i][7];
+        
+        if(topic_followed)
+            var a_data='<a href="javascript:;" class="follow meta-item zg-unfollow" name="follow" data-topic-id="'+topic_id+'" data-followed="true"><i class="z-icon-follow"></i>取消关注</a>';
+        else
+            var a_data='<a href="javascript:;" class="follow meta-item zg-follow" name="follow" data-topic-id="'+topic_id+'" data-followed="false"><i class="z-icon-follow"></i>关注</a>';
         
         if(topiclist_item_nums%2!=0)//odd
         {
@@ -38,7 +74,7 @@ function appendTopicElement(ret)
                         <strong>'+topic_name+'</strong>\
                         </a>\
                         <p>'+topic_detail+'</p>\
-                        <a id="t::-253" href="javascript:;" class="follow meta-item zg-follow"><i class="z-icon-follow"></i>关注</a>\
+                        '+a_data+'\
                         </div></div>';
         }
         else//even
@@ -49,7 +85,7 @@ function appendTopicElement(ret)
                         <strong>'+topic_name+'</strong>\
                         </a>\
                         <p>'+topic_detail+'</p>\
-                        <a id="t::-1172" href="javascript:;" class="follow meta-item zg-follow"><i class="z-icon-follow"></i>关注</a>\
+                        '+a_data+'\
                         </div></div>';
         }
         $("#topiclist").append(data);
@@ -64,14 +100,15 @@ function getMoreData(step) {
     $.get('/ajax/topics/'+bIsGetAll+'/'+start+'/'+end+'/',function(ret){
         if("fail"!=ret)
         {
-            appendTopicElement(ret);  
+            appendTopicElement(ret); 
+            followTopics();            
             checkSets();
         }
     });
 } 
 function init()
 {
-    topiclist_item_nums=0;
+    topiclist_item_nums=1;
     getMoreData(20);
     appendLetterModal();
 }
@@ -154,15 +191,16 @@ function init()
         <div class="AppHeader">
         <div class="container">
         <div class="row">
-        <div class="1col-md-offset-1 col-md-8">
+        <div class="1col-md-offset-1 col-md-7">
         
         <div class="zm-topic-cat-sub">
         <div class="zh-general-list clearfix"  style="display: block;">
         <div id="topiclist">
         </div>
 
-        </div><a aria-role="button" class="zg-btn-white zu-button-more">更多</a>
-        <a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="display:none">更多</a>
+        </div>
+        <!--<a aria-role="button" class="zg-btn-white zu-button-more">更多</a>
+        <a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="display:none">更多</a>-->
         </div>
 
         </div>
